docs/tests/syntax/bad/testfile-for6-1.cpp
void m() { for(int i = 0; true; i++) }
